(test
 (name test_msf)
 (libraries pdb object alcotest)
 (action
  (run %{exe:test_msf.exe})))

(test
 (name test_hash)
 (libraries pdb alcotest)
 (action
  (run %{exe:test_hash.exe})))

(test
 (name test_named_stream_map)
 (libraries pdb object alcotest)
 (action
  (run %{exe:test_named_stream_map.exe})))

(test
 (name test_pdb_stream)
 (libraries pdb object alcotest)
 (action
  (run %{exe:test_pdb_stream.exe})))

(test
 (name test_codeview_constants_roundtrip)
 (libraries pdb alcotest qcheck-core qcheck-alcotest)
 (preprocess
  (staged_pps ppx_import ppx_deriving_qcheck)))

(test
 (name test_codeview_types)
 (libraries pdb object alcotest)
 (action
  (run %{exe:test_codeview_types.exe})))

(test
 (name test_codeview_symbols)
 (libraries pdb object alcotest)
 (action
  (run %{exe:test_codeview_symbols.exe})))

(test
 (name test_dbi)
 (libraries pdb object alcotest)
 (action
  (run %{exe:test_dbi.exe})))
